@@ -1,0 +1,7 @@
+<?php
+/** Fulah (Fulfulde)
+ *
+ * @addtogroup Language
+ */
+
+$fallback='fr';
